--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -71,7 +71,7 @@
                     </h1>
                 </div>
                 <div class="oe_right oe_button_box" name="buttons">
-                    <button name="%(infrastructure.action_infrastructure_database_module)d" icon="fa-th" type="action" class="oe_inline oe_stat_button" context="{'search_default_database_id': id,'search_default_installed': 1}">
+                    <button name="%(infrastructure.action_infrastructure_database_module)d" states="active" icon="fa-th" type="action" class="oe_inline oe_stat_button" context="{'search_default_database_id': id,'search_default_installed': 1}">
                         <field name="module_count" widget="statinfo"/>
                     </button>
                 </div>
@@ -86,20 +86,29 @@
                  <group>
                     <group>
                         <field name="partner_id"/>
+                        <label for="admin_password"/>
+                        <div>
+                            <field
+                                name="admin_password"
+                                password="True"
+                                class="oe_inline"/>
+                            <button name="show_passwd"
+                                string="⇒ View Password"
+                                type="object"
+                                class="oe_link oe_read_only"/>
+                        </div>
+                        <label for="main_hostname"/>
+                    </group>
+                    <group>
+                        <field name="demo_data"/>
+                        <field name="advance_type"/>
                         <field name="issue_date"/>
                         <field name="deactivation_date"/>
-                        <field name="demo_data"/>
-                        <label for="admin_password"/>
-                            <div>
-                                <field
-                                    name="admin_password"
-                                    password="True"
-                                    class="oe_inline"/>
-                                <button name="show_passwd"
-                                    string="⇒ View Password"
-                                    type="object"
-                                    class="oe_link oe_read_only"/>
-                            </div>
+                        <field name="drop_date"/>
+                    </group>
+                 </group>
+                <notebook>
+                    <page string="Backups" states="active" name="backups">
                         <label for="backups_enable"/>
                         <div class="oe_inline">
                             <field name="backups_enable"/><button class="oe_read_only oe_link" type="object" name="config_backups" attrs="{'invisible':['|',('state','!=','active'),('backups_enable','=',False)]}" string="Config Backups"/>
@@ -108,29 +117,32 @@
                         <div attrs="{'invisible':[('backups_enable','=',False)]}">
                             <field name="daily_backup" /><label for="daily_backup" string="Daily"/> - <field name="weekly_backup"/><label for="daily_backup" string="Weekcly"/> - <field name="monthly_backup"/><label for="monthly_backup" string="Monthly"/>
                         </div>
-                    </group>
-                    <group>
-                        <label for="smtp_server_id"/>
-                        <div class="oe_inline">
-                            <field name="smtp_server_id" class="oe_inline"/>
-                            <button class="oe_link oe_inline oe_read_only" type="object" name="upload_mail_server_config" attrs="{'invisible':['|',('state','!=','active'),('smtp_server_id','=',False)]}" string="Upload Config"/>
-                        </div>
-                        <label for="catchall_enable"/>
-                        <div class="oe_inline">
-                            <field name="catchall_enable"/><button class="oe_link oe_read_only" type="object" name="config_catchall" attrs="{'invisible':['|',('state','!=','active'),('catchall_enable','=',False)]}" string="Config Catchall"/>
-                        </div>
-                        <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id)]"/>
-                        <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)],'required':[('alias_hostname_wildcard','=',True),('catchall_enable','=',True)]}"/>
-                        <field name="domain_alias" attrs="{'invisible':[('catchall_enable','=',False)]}"/>
-                        <field name="alias_hostname_wildcard" attrs="{'invisible':[('catchall_enable','=',False)]}" invisible="1"/>
-                    </group>
-                 </group>
-                <notebook>
-                    <page string="Backups" name="backup_ids">
-                        <button type="object" name="update_backups_data" string="Update Backups Data"/>
-                        <field name="backup_ids"/>
+                        <button type="object" name="update_backups_data" string="Update Backups Data" attrs="{'invisible':[('backups_enable','=',False)]}" />
+                        <field name="backup_ids" attrs="{'invisible':[('backups_enable','=',False)]}" />
                     </page>
-                    <page string="Base Modules" name="base_module_ids">
+                    <page string="email Config" states="active" name="email_config">
+                        <group>
+                            <label for="smtp_server_id"/>
+                            <div class="oe_inline">
+                                <field name="smtp_server_id" class="oe_inline"/>
+                                <button class="oe_link oe_inline oe_read_only" type="object" name="upload_mail_server_config" attrs="{'invisible':['|',('state','!=','active'),('smtp_server_id','=',False)]}" string="Upload Config"/>
+                            </div>
+                            <label for="catchall_enable"/>
+                            <div class="oe_inline">
+                                <field name="catchall_enable"/><button class="oe_link oe_read_only" type="object" name="config_catchall" attrs="{'invisible':['|',('state','!=','active'),('catchall_enable','=',False)]}" string="Config Catchall"/>
+                            </div>
+                            <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id)]"/>
+                            <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)],'required':[('alias_hostname_wildcard','=',True),('catchall_enable','=',True)]}"/>
+                            <field name="domain_alias" attrs="{'invisible':[('catchall_enable','=',False)]}"/>
+                            <field name="alias_hostname_wildcard" attrs="{'invisible':[('catchall_enable','=',False)]}" invisible="1"/>
+                        </group>
+                        <group>
+                            <field name="mailgate_path"/>
+                            <field name="virtual_alias"/>
+                            <field name="local_alias"/>
+                        </group>
+                    </page>
+                    <page string="Base Modules" states="active" name="base_module_ids">
                         <button type="object" name="action_update_modules_data" string="Update Modules Data"/>
                         <button type="object" name="install_base_modules" string="Install Modules"/>
                         <field name="base_module_ids" context="{'database_id':id}">
@@ -142,23 +154,11 @@
                             </tree>
                         </field>
                     </page>
-                    <page string="Modules" name="module_ids">
-                        <button type="object" name="action_update_modules_data" string="Update Modules Data"/>
-                        <field name="module_ids"/>
-                    </page>
                     <page string="Notes">
                         <field name="note"/>
                     </page>
-                    <page string="Technical">
-                        <group>
-                            <field name="mailgate_path"/>
-                            <field name="virtual_alias"/>
-                            <field name="local_alias"/>
-                        </group>
-                    </page>
                 </notebook>
             </sheet>
-
             <div class="oe_chatter">
                 <field name="message_follower_ids" widget="mail_followers"/>
                 <field name="message_ids" widget="mail_thread"/>
@@ -177,10 +177,9 @@
             colors="grey:state=='cancelled';blue:state in ('draft',);black:state in ('active', 'deactivated', 'maintenance'); red:state in ()"
             >
             <field name="message_unread" invisible="1"/>
-            <field name="name"/>
             <field name="database_type_id"/>
+            <field name="name"/>
             <field name="partner_id"/>
-            <field name="demo_data"/>
             <field name="server_id"/>
             <field name="environment_id" invisible="1"/>
             <field name="instance_id"/>
