--- a/infrastructure/view/server_service_view.xml
+++ b/infrastructure/view/server_service_view.xml
@@ -8,7 +8,7 @@
     <field name="name">infrastructure.server_service.select</field>
     <field name="model">infrastructure.server_service</field>
     <field name="arch" type="xml">
-        <search string="server_service" version="7.0">
+        <search string="server_service">
             <group string="By Attribute">
                 <field name="service_id" string="Service"/>
             </group>
@@ -23,7 +23,7 @@
     <field name="name">infrastructure.server_service.form</field>
     <field name="model">infrastructure.server_service</field>
     <field name="arch" type="xml">
-        <form string="server_service" version="7.0">
+        <form string="server_service">
             <header>
             </header>
             <sheet string="server_service">
